// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H6 Snapshot added optional style inline prop 1`] = `
<h6
  className="jsx-2115579342"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  Heading 1
</h6>
`;

exports[`Component H6 Snapshot primary color of the theme 1`] = `
<h6
  className="jsx-4285105796"
  style={Object {}}
>
  Heading 6
</h6>
`;

exports[`Component H6 Snapshot secondary font-family of the theme 1`] = `
<h6
  className="jsx-402319187"
  style={Object {}}
>
  Heading 6
</h6>
`;

exports[`Component H6 Snapshot without arguments, take the default values 1`] = `
<h6
  className="jsx-2115579342"
  style={Object {}}
>
  Heading 6
</h6>
`;
